# pyrokid_cxr_clientm

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: conf.py  index.rst
docs/source/pyrokid_crx_clientm/: index.rst  libcaps.rst
docs/source/pyrokid_cxr_clientm/: index.rst  libcaps.rst  libcxr_sock_proto_jni.rst  utils.rst
docs/source/pyrokid_cxr_clientm/extend/: callbacks.rst  controllers.rst  infos.rst  listeners.rst  sync.rst  version.rst
docs/source/pyrokid_cxr_clientm/extend/infos/: glass_info.rst  icon_info.rst  rk_app_info.rst  rk_wifi_info.rst  scene_status_info.rst  schedule_info.rst
src/pyrokid_crx_clientm/: __init__.py  libcaps.py
src/pyrokid_cxr_clientm/: __init__.py  libcaps.py  libcxr_sock_proto_jni.py
src/pyrokid_cxr_clientm/extend/: __init__.py
src/pyrokid_cxr_clientm/extend/callbacks/: bluetooth_status_callback.py  glass_info_result_callback.py  glass_version_callback.py  photo_path_callback.py  photo_result_callback.py  send_status_callback.py  sync_status_callback.py  unsync_num_result_callback.py  wifi_list_callback.py  wifi_p2p_status_callback.py
src/pyrokid_cxr_clientm/extend/infos/: __init__.py  glass_info.py  icon_info.py  rk_app_info.py  rk_wifi_info.py  scene_status_info.py  schedule_info.py
src/pyrokid_cxr_clientm/extend/listeners/: artc_listener.py  custom_view_listener.py  scene_status_update_listener.py
src/pyrokid_cxr_clientm/extend/sync/: retrofit_client.py  retrofit_service.py
