[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrokid_crx_clientm"
version = "0.0.1"
authors = [
  { name="Miniontoby", email="author@example.com" },
]
description = "A python port of the com.rokid.crx.client-m Java library."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["rokid", "crx", "client-m", "glasses", "rokid glasses", "com.rokid.crx.client-m"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["bleak"]

[project.urls]
Homepage = "https://github.com/Miniontoby/pyrokid_crx_clientm"
Documentation = "https://pyrokid-crx-clientm.readthedocs.io/en/latest/"
Repository = "https://github.com/Miniontoby/pyrokid_crx_clientm.git"
"Bug Tracker" = "https://github.com/Miniontoby/pyrokid_crx_clientm/issues"
